argorallout/destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: myapp-dr
spec:
  host: myapp-stable.default.svc.cluster.local
  subsets:
  - name: stable
    labels:
      rollouts-pod-template-hash: stable
  - name: canary
    labels:
      rollouts-pod-template-hash: canary
